--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Xuanrui Feng / Personal Homepage"
 title_separator          : "-"
 name                     : &name "Xuanrui Feng"
 description              : &description "Undergraduate student from PKU"
-url                      : https://fengxuanrui.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://fengxuanrui.github.io # the base hostname & protocol for your site e.g. "https://fengxuanrui.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "fengxuanrui/fengxuanrui.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
