--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Xuanrui Feng / Personal Homepage"
 title_separator          : "-"
 name                     : &name "Xuanrui Feng"
-description              : &description "PKU Undergraduate Student"
+description              : &description "PKU Ph.D. Student"
 url                      : https://fengxuanrui.github.io # the base hostname & protocol for your site e.g. "https://fengxuanrui.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "fengxuanrui/fengxuanrui.github.io"
