--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Xuanrui Feng"
   avatar           : "photo.png"
-  bio              : "PKU Undergraduate Student"
+  bio              : "PKU Ph.D. Student"
   location         : "Beijing, China"
   employer         :
   pubmed           :  # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
