--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Xuanrui Feng"
-  avatar           : "photo.png"
+  avatar           : "photo.jpg"
   bio              : "PKU Ph.D. Student"
   location         : "Beijing, China"
   employer         :
