--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@
 #    url: /talks/    
 
   - title: "Teaching"
-    url: /teaching/2024-fall-teaching-Advanced Mathematics D.md    
+    url: /teaching/
     
 #  - title: "Portfolio"
 #    url: /portfolio/
